[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes_and_Scripts/Player/PlayerGhost.gd" type="Script" id=1]
[ext_resource path="res://Scenes_and_Scripts/Player/spawn_particles.tres" type="Material" id=2]
[ext_resource path="res://Resources/Artwork/Effects/effect9.png" type="Texture" id=3]
[ext_resource path="res://Scenes_and_Scripts/Player/Ghost_trail2.tres" type="Material" id=4]
[ext_resource path="res://Resources/Artwork/Effects/effect6.png" type="Texture" id=5]
[ext_resource path="res://Scenes_and_Scripts/Player/Ghost_trail.tres" type="Material" id=6]
[ext_resource path="res://Resources/Artwork/Effects/effect2.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 19.3323

[sub_resource type="CircleShape2D" id=2]
radius = 49.3909

[node name="PlayerGhost" type="RigidBody2D"]
position = Vector2( 80, 290 )
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="SpawnAnimation" type="Particles2D" parent="."]
emitting = false
amount = 114
lifetime = 1.5
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
process_material = ExtResource( 2 )
texture = ExtResource( 3 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Trail2" type="Particles2D" parent="."]
scale = Vector2( 1.3, 1.3 )
amount = 50
lifetime = 4.0
speed_scale = 5.0
local_coords = false
process_material = ExtResource( 4 )
texture = ExtResource( 5 )

[node name="Trail" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.392274 )
scale = Vector2( 1.5, 1.5 )
amount = 30
lifetime = 2.0
speed_scale = 2.0
process_material = ExtResource( 6 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="MouseTrackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseTrackRange"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpawnDelay" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="timeout" from="SpawnDelay" to="." method="_on_SpawnDelay_timeout"]
